Fix wrong background in app bar.

--- a/provider-tools/src/main/res/layout/fragment_normal_layout.xml
+++ b/provider-tools/src/main/res/layout/fragment_normal_layout.xml
@@ -19,7 +19,7 @@
 
         <FrameLayout
             android:id="@+id/container_2"
-            style="?attr/appBarStyle"
+            android:background="?colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
