--- a/provider-tools/src/main/res/layout/fragment_provider_settings.xml
+++ b/provider-tools/src/main/res/layout/fragment_provider_settings.xml
@@ -15,11 +15,27 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <FrameLayout
-                android:id="@+id/container"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/MyPreferenceCategory2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:text="@string/pref_layout_title" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/layout_recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="4dp"
+                    android:scrollbars="horizontal" />
+
+            </LinearLayout>
 
             <FrameLayout
                 android:id="@+id/sections_container"
