--- a/theme/src/main/res/values-night/styles.xml
+++ b/theme/src/main/res/values-night/styles.xml
@@ -1,189 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
-
-    <style name="AppTheme.DayNight" parent="BaseTheme"></style>
-
-    <style name="AppTheme.DayNight.BlackWhite">
-        <item name="colorPrimaryDark">#000</item>
-        <item name="appBarStyle">@style/AppActionBar</item>
-        <item name="toolbarStyle">@style/AppToolbar</item>
-        <item name="colorOnPrimary">@color/tint_dark</item>
+<resources>
+    <style name="Widget.App.PopupMenu" parent="ThemeOverlay.MaterialComponents">
     </style>
-
-    <style name="AppToolbar" parent="@style/Widget.MaterialComponents.Toolbar">
-        <item name="android:background">?android:attr/colorBackground</item>
+    <style name="Widget.App.PopupMenu.Overflow" parent="Widget.MaterialComponents.PopupMenu.Overflow">
     </style>
-
-    <style name="AppActionBar" parent="ThemeOverlay.MaterialComponents.Dark">
-        <item name="android:background">?android:colorBackground</item>
-    </style>
-
-    <style name="AppTheme.DayNight.BlackWhite.Blue">
-        <item name="colorPrimary">@color/blue_200</item>
-        <item name="colorSecondary">@color/blue_200</item>
-        <item name="colorOnPrimary">#000</item>
-        <item name="colorOnSecondary">#000</item>
-    </style>
-
-    <style name="AppTheme.DayNight.Blue">
-        <item name="colorPrimary">@color/blue_300</item>
-        <item name="colorPrimaryDark">@color/blue_500</item>
-        <item name="colorAccent">@color/lime_300</item>
-        <item name="colorOnPrimary">#000</item>
-        <item name="colorOnSecondary">#000</item>
-    </style>
-
-    <style name="AppTheme.DayNight.BlueGrey">
-        <item name="colorPrimary">@color/blue_grey_400</item>
-        <item name="colorPrimaryDark">@color/blue_grey_600</item>
-        <item name="colorSecondary">@color/red_400</item>
-    </style>
-
-    <style name="AppTheme.DayNight.Brown">
-        <item name="colorPrimary">@color/brown_300</item>
-        <item name="colorPrimaryDark">@color/brown_500</item>
-        <item name="colorSecondary">@color/red_300</item>
-    </style>
-
-    <style name="AppTheme.DayNight.Cyan" parent="AppTheme.DayNight.LightPrimaryColor">
-        <item name="colorPrimary">@color/cyan_300</item>
-        <item name="colorPrimaryDark">@color/cyan_500</item>
-        <item name="colorSecondary">@color/amber_300</item>
-        <item name="colorOnPrimary">#000</item>
-        <item name="colorOnSecondary">#000</item>
-    </style>
-
-    <style name="AppTheme.DayNight.DeepOrange">
-        <item name="colorPrimary">@color/deep_orange_300</item>
-        <item name="colorOnPrimary">#000</item>
-        <item name="colorPrimaryDark">@color/deep_orange_500</item>
-        <item name="colorSecondary">@color/indigo_300</item>
-    </style>
-
-    <style name="AppTheme.DayNight.DeepPurple">
-        <item name="colorPrimary">@color/deep_purple_300</item>
-        <item name="colorPrimaryDark">@color/deep_purple_400</item>
-        <item name="colorSecondary">@color/red_300</item>
-    </style>
-
-    <style name="AppTheme.DayNight.Gray" parent="AppTheme.DayNight.LightPrimaryColor">
-        <item name="colorPrimary">@color/gray_500</item>
-        <item name="colorPrimaryDark">@color/gray_700</item>
-        <item name="colorAccent">@color/pink_a200</item>
-    </style>
-
-    <style name="AppTheme.DayNight.Green" parent="AppTheme.DayNight.LightPrimaryColor">
-        <item name="colorPrimary">@color/green_300</item>
-        <item name="colorPrimaryDark">@color/green_400</item>
-        <item name="colorSecondary">@color/red_300</item>
-    </style>
-
-    <style name="AppTheme.DayNight.Indigo">
-        <item name="colorPrimary">@color/indigo_300</item>
-        <item name="colorPrimaryDark">@color/indigo_500</item>
-        <item name="colorSecondary">@color/pink_300</item>
-        <item name="colorOnSecondary">#000</item>
-    </style>
-
-    <style name="AppTheme.DayNight.LightBlue" parent="AppTheme.DayNight.LightPrimaryColor">
-        <item name="colorPrimary">@color/light_blue_400</item>
-        <item name="colorPrimaryDark">@color/light_blue_600</item>
-        <item name="colorSecondary">@color/pink_200</item>
-        <item name="colorOnPrimary">#000</item>
-        <item name="colorOnSecondary">#000</item>
-    </style>
-
-    <style name="AppTheme.DayNight.LightGreen" parent="AppTheme.DayNight.LightPrimaryColor">
-        <item name="colorPrimary">@color/light_green_500</item>
-        <item name="colorPrimaryDark">@color/light_green_700</item>
-        <item name="colorAccent">@color/cyan_a400</item>
-        <item name="colorOnSecondary">@color/tint_dark</item>
-        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
-    </style>
-
-    <style name="AppTheme.DayNight.Lime" parent="AppTheme.DayNight.LightPrimaryColor">
-        <item name="colorPrimary">@color/lime_400</item>
-        <item name="colorPrimaryDark">@color/lime_600</item>
-        <item name="colorSecondary">@color/light_blue_400</item>
-        <item name="colorOnPrimary">#000</item>
-        <item name="colorOnSecondary">#000</item>
-        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
-    </style>
-
-    <style name="AppTheme.DayNight.Material">
-
-    </style>
-
-    <style name="AppTheme.DayNight.Orange" parent="AppTheme.DayNight.LightPrimaryColor">
-        <item name="colorPrimary">@color/orange_300</item>
-        <item name="colorPrimaryDark">@color/orange_500</item>
-        <item name="colorOnPrimary">#000</item>
-        <item name="colorAccent">@color/teal_300</item>
-        <item name="colorOnSecondary">#000</item>
-        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
-    </style>
-
-    <style name="AppTheme.DayNight.Pink">
-        <item name="colorPrimary">@color/pink_400</item>
-        <item name="colorPrimaryDark">@color/pink_600</item>
-    </style>
-
-    <style name="AppTheme.DayNight.Pink.Blue">
-        <item name="colorSecondary">@color/blue_200</item>
-        <item name="colorOnSecondary">#000</item>
-    </style>
-
-    <style name="AppTheme.DayNight.Pink.Lime">
-        <item name="colorSecondary">@color/lime_200</item>
-        <item name="colorOnSecondary">#000</item>
-    </style>
-
-    <style name="AppTheme.DayNight.Purple">
-        <item name="colorPrimary">@color/purple_300</item>
-        <item name="colorPrimaryDark">@color/purple_500</item>
-    </style>
-
-    <style name="AppTheme.DayNight.Purple.Red">
-        <item name="colorSecondary">@color/red_200</item>
-        <item name="colorSecondaryVariant">@color/red_a200</item>
-        <item name="colorOnSecondary">#000</item>
-    </style>
-
-    <style name="AppTheme.DayNight.Purple.Green">
-        <item name="colorSecondary">@color/green_200</item>
-        <item name="colorSecondaryVariant">@color/green_500</item>
-        <item name="colorOnSecondary">#000</item>
-    </style>
-
-    <style name="AppTheme.DayNight.Red">
-        <item name="colorPrimary">@color/red_400</item>
-        <item name="colorPrimaryDark">@color/red_600</item>
-        <item name="colorPrimaryVariant">@color/red_600</item>
-    </style>
-
-    <style name="AppTheme.DayNight.Red.Blue">
-        <item name="colorSecondary">@color/blue_200</item>
-        <item name="colorSecondaryVariant">@color/blue_500</item>
-    </style>
-
-    <style name="AppTheme.DayNight.Red.Teal">
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_500</item>
-    </style>
-
-    <style name="AppTheme.DayNight.Teal">
-        <item name="colorPrimary">@color/teal_300</item>
-        <item name="colorPrimaryDark">@color/teal_500</item>
-        <item name="colorAccent">@color/teal_300</item>
-        <item name="colorOnPrimary">#000</item>
-        <item name="colorOnSecondary">#000</item>
-    </style>
-
-    <style name="AppTheme.DayNight.Yellow" parent="AppTheme.DayNight.LightPrimaryColor">
-        <item name="colorPrimary">@color/yellow_400</item>
-        <item name="colorPrimaryDark">@color/yellow_600</item>
-        <item name="colorSecondary">@color/red_200</item>
-        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
-    </style>
-
 </resources>
