--- a/provider-tools/src/main/res/layout/digital_level_1.xml
+++ b/provider-tools/src/main/res/layout/digital_level_1.xml
@@ -5,5 +5,4 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:gravity="center"
-    android:orientation="vertical"
-    android:theme="?attr/appBarStyle" />
+    android:orientation="vertical"/>
