--- a/provider-tools/src/main/res/layout/fragment_rich_layout.xml
+++ b/provider-tools/src/main/res/layout/fragment_rich_layout.xml
@@ -6,10 +6,10 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
+        style="?appBarLayoutStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:theme="?attr/appBarStyle">
+        android:layout_alignParentTop="true">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
