--- a/provider-tools/src/main/res/layout/theme_item_layout_normal.xml
+++ b/provider-tools/src/main/res/layout/theme_item_layout_normal.xml
@@ -7,19 +7,14 @@
     tools:layout_height="match_parent"
     tools:layout_width="match_parent">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="24dp"
-        android:background="?colorPrimary" />
-
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="24dp"
+        android:layout_height="48dp"
         android:background="?colorPrimary"
-        android:gravity="center"
+        android:gravity="center|bottom"
         android:text="@string/section_n_2"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:theme="?attr/appBarStyle" />
+        android:textAppearance="?textAppearanceBody1"
+        style="?appBarLayoutStyle" />
 
     <TextView
         android:layout_width="match_parent"
@@ -28,6 +23,6 @@
         android:background="?android:colorBackground"
         android:gravity="center"
         android:text="@string/section_n_1"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+        android:textAppearance="?textAppearanceBody1" />
 
 </LinearLayout>
