--- a/theme/src/main/res/layout/item_theme.xml
+++ b/theme/src/main/res/layout/item_theme.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
@@ -8,9 +8,9 @@
     android:layout_margin="8dp"
     android:foreground="?android:attr/selectableItemBackground"
     android:minWidth="90dp"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="2dp"
+    app:cardElevation="4dp"
     app:cardUseCompatPadding="false"
+    app:strokeColor="?colorSecondary"
     tools:layout_height="wrap_content"
     tools:layout_width="wrap_content">
 
@@ -65,12 +65,4 @@
 
     </LinearLayout>
 
-    <View
-        android:id="@+id/border_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/item_selected"
-        android:visibility="invisible"
-        tools:visibility="visible" />
-
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
