--- a/provider-tools/src/main/res/layout/item_theme_layout.xml
+++ b/provider-tools/src/main/res/layout/item_theme_layout.xml
@@ -4,6 +4,8 @@
     android:id="@+id/card_view"
     android:layout_width="100dp"
     android:layout_height="160dp"
-    android:layout_margin="4dp"
+    android:layout_margin="8dp"
     android:foreground="?android:attr/selectableItemBackground"
-    app:cardBackgroundColor="?android:colorBackground" />
+    app:cardBackgroundColor="?android:colorBackground"
+    app:cardElevation="4dp"
+    app:strokeColor="?colorSecondary" />
