--- a/provider-tools/src/main/res/layout/level_digital_view.xml
+++ b/provider-tools/src/main/res/layout/level_digital_view.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:baselineAligned="false"
@@ -20,14 +19,15 @@
             android:layout_height="wrap_content"
             android:text="@string/level_roll"
             android:textAllCaps="true"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+            android:textAppearance="?textAppearanceSubtitle2"
+            android:textColor="?android:textColorSecondary" />
 
         <TextView
             android:id="@+id/roll_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            tools:text="95" />
+            android:text="95"
+            android:textAppearance="?textAppearanceHeadline4" />
     </LinearLayout>
 
     <LinearLayout
@@ -43,14 +43,15 @@
             android:layout_height="wrap_content"
             android:text="@string/level_pitch"
             android:textAllCaps="true"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+            android:textAppearance="?textAppearanceSubtitle2"
+            android:textColor="?android:textColorSecondary" />
 
         <TextView
             android:id="@+id/pitch_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            tools:text="95" />
+            android:text="95"
+            android:textAppearance="?textAppearanceHeadline4" />
     </LinearLayout>
 
 </LinearLayout>
