--- a/theme/src/main/res/drawable/circle.xml
+++ b/theme/src/main/res/drawable/circle.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@color/ib_textColorDisabled" />
+    <solid android:color="#000" />
 
     <size
         android:width="120dp"
